turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:0: error: class Kerr36 needs to be abstract, since method motif is not defined
class Kerr36 extends Turtle {
      ^